Fixed the gray box on mainmenu and opacmenu so it wraps more consistently

--- a/styles.css
+++ b/styles.css
@@ -678,7 +678,7 @@ div .bibResourceSidebar { display:none; }
 
 .indexList li {list-style-type:none;}
 
-
+.inlineBlock {display:inline-block; zoom: 1; *display: inline;}
 
 .itemSelect { width:50em; }
 
